samples/_failures_safe/1761311383_7973be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ff37440.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_3ff37440.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3ff37440.c:153:5: error: expected declaration or statement at end of input
  153 |     switch
      |     ^~~~~~
